# alloyium

./: .dockerignore  .env.example  .gitignore  AGENTS.md  GETTING_STARTED.md  LICENSE  LICENSE-DOCS  README.md  a2a-channel.ts  a2a_conversation_intelligence.ts  a2a_core.ts  a2a_fleet_orchestrator.ts  a2a_inbox_store.ts  a2a_launcher.ts  a2a_portal.ts  a2a_portal_hosts.ts  a2a_portal_send.ts  access_token_issuer.ts  aci_archive.ts  agent_beat.ts  agent_launcher_tools.ts  brain_tools.ts  claude_gateway.ts  codex_agent_tools.ts  codex_build_authz.ts  codex_build_client.ts  codex_build_guard.ts  codex_gateway.ts  codex_peer_routing.ts  codex_realtime.ts  codex_routing_governor.ts  compose.yaml  demo_agent.ts  fusion-ask  fusion_client.ts  fusion_codex_client.ts  fusion_service.ts  kai_tools.ts  materialize_kai_token.ts  mcp_session.ts  (+22 more)
a2a-shim/: Cargo.toml  README.md
a2a-shim/src/: app.rs  config.rs  ctrl.rs  framing.rs  hello.rs  lib.rs  main.rs  mcp_pump.rs  resilience.rs  signer.rs  transport.rs
a2a-shim/tests/: conformance.rs  scenarios.rs  sign_vectors.rs
a2a-shim/tests/shim-conformance/: SPEC-VECTORS.md  vectors.json
codex-protocol/: README.md
compose.presets/: full-codex.yaml
docs/: a2a-direct-send-encryption.md  codex-realtime-role.md  dynamic-container-uid.md  forgejo-token-labels.md  foundation-access-token-issuer.md  full-codex-node.md  host-claude-peer.md  host-codex-peer.md  shared-workspace.md  shim-core-performance-rca-2026-06-25.md
tests/: _require_bus.ts  a2a-core-uds-e2e.test.ts  a2a-core-uds.test.ts  a2a-core.test.ts  a2a-inbox-store.test.ts  (+45 more)
(+14 files in other folders)
